# Hug

./: .gitignore  Cargo.toml  LICENSE  ProjectFormat.md  README.md  SConstruct  bootstrap.py  makefile  test.sh
bootstrap/: compiler.py  ident.py  lexer.py  symbol.py  syntax.py  utils.py
examples/: LexerTest.hug  SyntaxTest.hug  Variables.hug
hug.old/hug_ast/src/: lib.rs
hug.old/hug_core/: Cargo.toml
hug.old/hug_lexer/src/: tokenizer.rs
hug.old/hug_lib/: Cargo.toml
hug.old/hug_vm/: Cargo.toml
hug.old/hug_vm/src/: lib.rs
hug.old/test/assembly/: hello_world.linux64.asm
hug_ast/: Cargo.toml
hug_ast/src/: lib.rs  parser.rs
hug_bin/: Cargo.toml
hug_bin/src/: main.rs
hug_compiler/: Cargo.toml
hug_compiler/src/: lib.rs
hug_core/: Cargo.toml
hug_core/hug/: core.hug
hug_core/src/: lib.rs
hug_designer/: Cargo.toml
hug_designer/src/: main.rs  node_browser.rs
hug_designer/src/app/: mod.rs
hug_designer/src/app.old/: mod.rs
hug_designer/src/app.old/theme/: colors.rs  mod.rs
hug_designer/src/app/theme/: colors.rs  light.rs  mod.rs
hug_designer/src/app/views/: editor.rs  mod.rs  projects.rs
hug_interpreter/: Cargo.toml
hug_interpreter/src/: lib.rs  vm.rs
hug_lexer/: Cargo.toml
hug_lexer/src/: lib.rs  parser.rs  tokenizer.rs
hug_lexer/tests/: tests.rs
hug_lib/: Cargo.toml
hug_lib/src/: ext.rs  instruction.rs  lib.rs  stack.rs  value.rs
hug_std/: Cargo.toml
hug_tokenizer/: Cargo.toml
hug_tokenizer/src/: lib.rs
hug_tokenizer/tests/: comments.rs  variables.rs
hug_transpiler/: Cargo.toml
hug_transpiler/src/: lib.rs
hug_vm/: Cargo.toml
makr_bin/: Cargo.toml
makr_bin/src/: main.rs
makr_compiler/: Cargo.toml
makr_interpreter/: Cargo.toml
makr_lib/: Cargo.toml
makr_lib/src/: instruction.rs
makr_std/: Cargo.toml
makr_transpiler/: Cargo.toml
makr_transpiler/src/: lib.rs
old-c/: makefile
old-c/src/: fileio.c  fileio.h  instruction.c  instruction.h  lexer.c  lexer.h  main.c  script.c  vm.c  vm.h
other/: hug.sublime-syntax
src/: bool.h  config.c  config.h  lexer.c  lexer.h  main.c  script.h  stack.c  stack.h  strings.c  strings.h  vm.c  vm.h
test/: call-stack.makr  printing.hug  prog.hug  prog.makr
test/assembly/: hello_libc.linux64.asm  hello_world.asm  notes.asm  run.sh  star_piramid.linux64.asm
