[package]
name = "hug"
version = "0.1.0"
edition = "2021"
authors = ["Hugo van de Kuilen <Hugo4IT>"]
description = "An easy-to-use programming language inspired by GDScript & Rust, focussed on being beginner-friendly while providing advanced features and incredible speed."

[dependencies]
hug_vm = { path = "../hug_vm" }
clap = { version = "3.0", features = ["cargo", "wrap_help"] }