[package]
name = "hug_designer"
version = "0.1.0"
edition = "2021"

[features]
default = []
explain = []

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "4411da25cfcfddab138dadd05e92f9bd4db1b763" }
iced_native = { git = "https://github.com/iced-rs/iced", rev = "4411da25cfcfddab138dadd05e92f9bd4db1b763" }