[package]
name = "hug_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hug_lib = { path = "../hug_lib" }
hug_ast = { path = "../hug_ast" }
hug_core = { path = "../hug_core" }
hug_lexer = { path = "../hug_lexer" }
libloading = "0.7"