[package]
name = "makr_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.13"
makr_compiler = { path = "../makr_compiler" }
makr_transpiler = { path = "../makr_transpiler" }
makr_interpreter = { path = "../makr_interpreter" }